# cmakex

./: LICENSE  README.md  pyproject.toml
src/cmakex/: __init__.py  __main__.py  cli.py
src/cmakex/builder/: __init__.py  cleaner.py  operations.py
src/cmakex/parser/: __init__.py  lexer.py  models.py  parser.py  resolver.py
