[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmakex"
version = "0.1.0"
description = "CMake build eXtension — configure, build, clean, and inspect CMake projects from the CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "winterYANGWT", email = "winterYANGWT@users.noreply.github.com" }
]
keywords = ["cmake", "build", "c++", "c", "helper", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.scripts]
cmakex = "cmakex.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
